# periscope-schema-harmonizer

./: .gitignore  DEMO.md  README.md  TASKS.md  app.py  app.yaml  databricks.yml  main.py  pyproject.toml  requirements.txt
docs/: DEMO_SCRIPT.md  EMAIL_DRAFT.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ConfidenceBadge.tsx  ConfidenceBar.tsx  EmptyState.tsx  Layout.tsx  PageHeader.tsx  Spinner.tsx  StatusBadge.tsx
frontend/src/pages/customer/: Chat.tsx  FileUpload.tsx  UploadDetail.tsx  UploadHistory.tsx
frontend/src/pages/review/: CDMExplorer.tsx  PendingReviews.tsx  ReviewDetail.tsx
frontend/src/stores/: cdmStore.ts  chatStore.ts  reviewStore.ts  uploadStore.ts
frontend/src/types/: index.ts
server/: config.py  db.py  llm.py  uc.py
server/routes/: cdm.py  chat.py  mapping.py  reviews.py  upload.py
setup/: 00_data_model.py  01_create_uc_tables.py  02_create_lakebase_tables.py  03_generate_synthetic_data.py  04_create_vs_index.py  _env.py
